--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,116 @@
-* {
-    margin: 0;
+body {
+    background-color: #eee;
+}
+
+h1,h2,h3,h4,h5,h6,p,a {
+    font-family: sans-serif;
+}
+
+.bg-primary {
+    background-color: #ddd !important;
+}
+
+.navbar-dark .navbar-nav .nav-link,
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:active,
+.navbar-dark .navbar-nav .nav-link:focus {
+    color: purple;
+    box-shadow: none;
+}
+
+.nav-link:hover {
+    transform: scale(1.1);
+}
+
+.nav-link {
+    transition: all 0.5s ease-in-out !important;
+}
+
+.container-fluid {
+    margin-top: 60px;
+}
+
+@media(max-width: 576px) {
+    .container-fluid {
+        margin-top: 80px;
+    }
+}
+
+.page {
+    display: none;
+}
+
+.page[data-active] {
+    display: block;
+}
+
+.card {
+    margin-bottom: 30px;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
+    background-color: transparent;
+    border: none;
 }
 
-h1 {
-    font-size: 28px;
-    color: #909;
+.card-body {
+    margin: 0 15px;
+    background-color: white;
 }
 
-h2 {
-    font-size: 22px;
-}
-
-header {
-    margin: 10px;
-}
-
-p {
-    font-size: 18px;
-    line-height: 150%;
-}
-
-section {
-    margin: 20px 10px;
-}
-
-a {
-    color: #909;
-    font-weight:bold;
-}
-
-a:visited {
-    color: #606;
-}
-
-img {
+.card img {
     height: 200px;
+    width: 80%;
+    object-fit: cover;
+    /* border-radius: 10px; */
+    margin-bottom: 20px;
+}
+
+.card .card-img-top-github {
+    object-fit: contain;
+}
+
+.card .card-body {
+    box-shadow: 3px 3px 5px #ccc;
+}
+
+.card .card-text {
+    max-width: 100%;
+}
+
+.card .card-text .description {
+    display: inline-block;
+    height: 50px;
+}
+
+.card strong {
+    line-height: 40px;
+}
+
+.card .btn {
+    border-radius: 0;
+    line-height: 20px;
+}
+
+footer {
+    display: inline-block;
+    width: 100%;
+    background-color: white;
+    padding: 5px 5px 0 5px;
+    box-shadow: 3px 3px 5px #ccc;
+}
+
+footer p {
+    padding: 0;
+    margin: 0;
+}
+
+.bg-light {
+    background: white;
+}
+
+.form-group:last-of-type {
+    margin-bottom: 0;
+}
+
+.title {
+    color: purple;
 }
