fix header link

--- a/templates/includes/header.pug
+++ b/templates/includes/header.pug
@@ -1,6 +1,6 @@
 header
   nav.p-0.p-sm-2.navbar.d-block.d-sm-flex.fixed-top.navbar-expand.navbar-dark.bg-primary(role='navigation')
-    a.w-100.p-0.pt-1.pt-sm-0.w-sm-auto.text-center.text-sm-left.navbar-brand(href='#portfolio')
+    a.w-100.p-0.pt-1.pt-sm-0.w-sm-auto.text-center.text-sm-left.navbar-brand(href='#intro')
       img(src='/img/dan.jpg' style='height:32px' alt='')
       span.title.ml-2 Dan Dart
     include menu
