--- a/templates/pages/ham.pug
+++ b/templates/pages/ham.pug
@@ -1,4 +1,17 @@
 #ham.page
-  +breadcrumb Ham Radio
-  p I am a UK full-licenced radio amateur, and have the callsign M0ORI.
-  p I'll have more information about this soon.
+  +breadcrumb Ham Radio+
+  .row
+    .col-md-8.offset-md-2.py-3.bg-light
+      p I am a UK full-licenced radio amateur, and have been issued the callsign M0ORI.
+      p I own the following types of radio:
+      ul
+        li Yaesu FT-817 (5W, all-mode HF, VHF, UHF transceiver)
+        li Baofeng UV-82 (5W, FM, VHF and UHF transceiver)
+        li Baofeng UV-3R (2W, FM, VHF and UHF transceiver).
+      p You may sometimes find me on:
+      ul
+        li FM in mid-Somerset, UK (IO81).
+        li PSK on usually 20m
+        li JT modes on usually 20m
+      p
+        a(href='https://www.qrzcq.com/call/M0ORI',target='_blank') My QRZCQ page
