--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ h1,h2,h3,h4,h5,h6,p,a {
     font-family: sans-serif;
 }
 
+p, ul {
+    margin: 0;
+}
+
 .bg-primary {
     background-color: #ddd !important;
 }
