--- a/templates/pages/maths.pug
+++ b/templates/pages/maths.pug
@@ -1,13 +1,31 @@
 #maths.page
   +breadcrumb Maths
-  p Mathematics has always been a great pastime for me.
-  p I have invented quite a few visualisations and generators for several interesting piecss of mathematics, which you can see on my&nbsp;
-    a(href='https://github.com/danwdart/projects/tree/master/js/maths',target='_blank') projects repo on GitHub
-  p My current&nbsp;
-    a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
-    | &nbsp;contributions are:
-  ul
-    li
-      a(href='https://oeis.org/A275124',target='_blank') A275124: Multiples of 5 where Pisano periods of Fibonacci numbers A001175 and Lucas numbers A106291 agree.
-    li
-      a(href='https://oeis.org/A275167',target='_blank' ) A275167: Pisano periods of A275124.
+  .row
+    .col-md-8.offset-md-2.py-3.bg-light
+      p Mathematics has always been a great pastime for me.
+      p I have invented quite a few visualisations and generators for several interesting pieces of mathematics, some of which you can see and try on my&nbsp;
+        a(href='https://github.com/danwdart/projects/tree/master/js/maths',target='_blank') projects repo on GitHub
+      p Some notable (read: working right now) examples are:
+      ul
+        li
+          a(href='https://rawgit.com/danwdart/projects/master/js/maths/src/cfe/index.html',target='_blank') Continued Fraction Expander
+        li A set of gravity simulators 
+          a(href='https://rawgit.com/danwdart/gravity/master/2/gravity.html',target='_blank') (sun version, left click for planets, middle click for stars)
+          |, 
+          a(href='https://rawgit.com/danwdart/gravity/master/4/gravity.html',target='_blank') (black hole version)
+        li
+          a(href='https://rawgit.com/danwdart/projects/master/js/maths/src/cellautomata/index.html',target='_blank') Cell Automata
+        li
+          a(href='https://rawgit.com/danwdart/projects/master/js/maths/src/sternbrocot/sbgraphtones.html',target='_blank') Stern-Brocot Graph Tones (warning: loud audio)
+          br
+          | &nbsp;(this is actually the answer similar to 
+          a(href='https://www.youtube.com/watch?v=zSL8asTgpzA',target='_blank') the riddle 
+          | I posed on my YouTube channel)
+      p My current&nbsp;
+        a(href='https://oeis.org',target='_blank',title='Online Encyclopedia of Integer Sequences') OEIS
+        | &nbsp;contributions are:
+      ul
+        li
+          a(href='https://oeis.org/A275124',target='_blank') A275124: Multiples of 5 where Pisano periods of Fibonacci numbers A001175 and Lucas numbers A106291 agree.
+        li
+          a(href='https://oeis.org/A275167',target='_blank' ) A275167: Pisano periods of A275124.
