--- a/templates/pages/ham.pug
+++ b/templates/pages/ham.pug
@@ -3,11 +3,23 @@
   .row
     .col-md-8.offset-md-2.py-3.bg-light
       p I am a UK full-licenced radio amateur, and have been issued the callsign M0ORI.
+      p My nearest radio club is 
+        a(href='https://www.midsarc.org.uk/',target='_blank') Mid-Somerset Amateur Radio Club
+        |.
       p I own the following types of radio:
       ul
-        li Yaesu FT-817 (5W, all-mode HF, VHF, UHF transceiver)
-        li Baofeng UV-82 (5W, FM, VHF and UHF transceiver)
-        li Baofeng UV-3R (2W, FM, VHF and UHF transceiver).
+        li
+          a(href='https://www.yaesu.com/indexVS.cfm?cmd=DisplayProducts&ProdCatID=102&encProdID=06014CD0AFA0702B25B12AB4DC9C0D27',target='_blank') Yaesu FT-817
+          |  (5W, all-mode HF, VHF, UHF transceiver)
+        li
+          a(href='https://baofengtech.com/uv82',target='_blank') Baofeng UV-82
+          |  (5W, FM, VHF and UHF transceiver)
+        li
+          a(href='http://www.uv3r.com/',target='_blank') Baofeng UV-3R
+          |  (2W, FM, VHF and UHF transceiver)
+        li
+          a(href='https://www.eham.net/reviews/detail/7627',target='_blank') Tecsun PL-600
+          |  (HF receiver)
       p You may sometimes find me on:
       ul
         li FM in mid-Somerset, UK (IO81).
