--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -1,7 +1,7 @@
 #intro.page
   +breadcrumb Intro
   .row
-    .col-md-8.offset-md-2.py-3.bg-light
+    .col-md-8.offset-md-2.py-3.mb-3.bg-light
       p Hello, my name is Dan.
       p I am a software engineer, mathematics lover, radio ham and musician.
       p I work remotely to care for my future wife,
@@ -9,13 +9,20 @@
         a(href='http://tsumikimikan.com',target='_blank') Tsumiki
         |.
       p I enjoy coffee, I think I'm addicted to caffeine. Don't be if you can help it!
-      p I enjoy maths, physics and computer science, and some of my favourite YouTube channels are:
+      p I also enjoy discordant and nonsensical commentary.
+      p Topics I can talk about at length:
+      ul
+        li Maths
+        li Physics
+        li Computer Science
+        li Linguistics
+      p Favourite YouTube channels:
       ul
         li
           a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
         li
           a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
-      p I have been diagnosed with:
+      p Diagnoses:
       ul
         li
           a(href='https://www.nhs.uk/conditions/autism/',target='_blank') Asperger's Syndrome
@@ -23,7 +30,18 @@
           a(href='https://www.nhs.uk/conditions/fibromyalgia/',target='_blank') Fibromyalgia
         li
           a(href='https://www.nhs.uk/conditions/generalised-anxiety-disorder/',target='_blank') Anxiety
-      p I like first-person shooters. My favourites are:
+      p Favourite coding languages:
+      ul
+        li
+          a(href='https://www.typescriptlang.org/',target='_blank') TypeScript
+          |  (for serious work)
+        li
+          a(href='https://en.wikipedia.org/wiki/JavaScript',target='_blank') Javascript
+          |  (for small, easy things)
+        li
+          a(href='https://pugjs.org',target='_blank') Pug
+          |  (used to generate this website)
+      p Favourite FPS games:
       ul
         li
           a(href='http://www.idsoftware.com/en-gb',target='_blank') Quake
@@ -31,12 +49,18 @@
           a(href='http://sauerbraten.org/',target='_blank') Cube 2: Sauerbraten
         li
           a(href='https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion',target='_blank') The Elder Scrolls IV: Oblivion
-      p My favourite 
-        a(href='http://www.gnu.org/gnu/why-gnu-linux.en.html',target='_blank') GNU/Linux
-        |  distro at the moment is 
-        a(href='http://kubuntu.org',target='_blank') Kubuntu
-        |  but my all-time favourite operating system is 
-        a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
-        |.
-      p I enjoy prog rock, heavy metal, ambient and classical music and also create my own experimental music.
-      p I also enjoy discordant and nonsensical commentary.
+      p Favourite operating systems:
+      ul
+        li
+          a(href='http://www.gnu.org/gnu/why-gnu-linux.en.html',target='_blank') GNU/Linux
+          |: 
+          a(href='http://kubuntu.org',target='_blank') Kubuntu
+        li
+          | All-time: 
+          a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
+      p Favourite musical styles:
+      ul
+        li Prog Rock
+        li Heavy Metal
+        li Ambient
+        li Classical
