--- a/templates/mixins/menuitem.pug
+++ b/templates/mixins/menuitem.pug
@@ -1,5 +1,6 @@
-mixin menuitem(location)
+mixin menuitem(name, isDefault)
   li.nav-item
-    a.nav-link.btn.btn-sm(href=location)
-      if block
-        block
+    label(for=name)
+      a.nav-link.btn.btn-sm(data-id=name)= name
+    input(type='radio',style='display:none',checked=isDefault,name='selected',id=name,value=name)
+    block
