--- a/templates/pages/ham.pug
+++ b/templates/pages/ham.pug
@@ -1,5 +1,5 @@
 #ham.page
-  +breadcrumb Ham Radio+
+  +breadcrumb Ham Radio
   .row
     .col-md-8.offset-md-2.py-3.bg-light
       p I am a UK full-licenced radio amateur, and have been issued the callsign M0ORI.
