--- a/templates/includes/head.pug
+++ b/templates/includes/head.pug
@@ -5,5 +5,6 @@ meta(http-equiv='Who-is-awesome' content='Dan')
 meta(charset='utf-8')
 meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
 meta(name='viewport' content='width=device-width, initial-scale=1')
+link(rel='stylesheet',type='text/css',href='/css/style.css')
 link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
 title Dan Dart: Software Engineer, Mathematics Lover, Radio Ham, Musician
