--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -56,6 +56,10 @@
           |: 
           a(href='http://kubuntu.org',target='_blank') Kubuntu
         li
+          a(href='https://en.wikipedia.org/wiki/Blue_Screen_of_Death',target='_blank') Windows
+          |: 
+          a(href='https://en.wikipedia.org/wiki/Windows_98',target='_blank') 98
+        li
           | All-time: 
           a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
       p Favourite musical styles:
