--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -58,7 +58,7 @@
         li
           a(href='https://en.wikipedia.org/wiki/Blue_Screen_of_Death',target='_blank') Windows
           |: 
-          a(href='https://en.wikipedia.org/wiki/Windows_98',target='_blank') 98
+          a(href='https://en.wikipedia.org/wiki/Windows_98#Windows_98_Second_Edition',target='_blank') 98 SE
         li
           | All-time: 
           a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
