--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -16,12 +16,6 @@
         li Physics
         li Computer Science
         li Linguistics
-      p Favourite YouTube channels:
-      ul
-        li
-          a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
-        li
-          a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
       p Diagnoses:
       ul
         li
@@ -30,6 +24,32 @@
           a(href='https://www.nhs.uk/conditions/fibromyalgia/',target='_blank') Fibromyalgia
         li
           a(href='https://www.nhs.uk/conditions/generalised-anxiety-disorder/',target='_blank') Anxiety
+      p Favourite YouTube channels:
+      ul
+        li
+          a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
+        li
+          a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
+      p Current favourite TV shows/movies:
+      ul
+        li The Hannibal film and TV series:
+          ul
+            li
+              a(href='https://www.imdb.com/title/tt0091474/',target='_blank') Manhunter (1986)
+              br
+              | (well, you know... it's got... Iron Butterfly? *shrug*)
+            li
+              a(href='https://www.imdb.com/title/tt0102926/',target='_blank') The Silence of the Lambs (1991)
+            li
+              a(href='https://www.imdb.com/title/tt0212985/',target='_blank') Hannibal (2001)
+            li
+              a(href='https://www.imdb.com/title/tt0289765/',target='_blank') Red Dragon (2002)
+            li
+              a(href='https://www.imdb.com/title/tt0367959/',target='_blank') Hannibal Rising (2007)
+            li
+              a(href='https://www.imdb.com/title/tt2243973/',target='_blank') Hannibal (TV series, 2013-)
+        //li Star Trek        
+      //p Current favourite music:
       p Favourite coding languages:
       ul
         li
