--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ a:visited {
     position: absolute;
     width: 100%;
     left: 0;
+    background: repeating-linear-gradient(-45deg, #ddd, #eee 5px, #eee 5px);
 }
 
 input:checked + .page {
