I love Star Trek

--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -48,7 +48,14 @@
               a(href='https://www.imdb.com/title/tt0367959/',target='_blank') Hannibal Rising (2007)
             li
               a(href='https://www.imdb.com/title/tt2243973/',target='_blank') Hannibal (TV series, 2013-)
-        //li Star Trek        
+        li Star Trek films and series:
+          ul
+            li
+              a(href='https://www.imdb.com/title/tt0092007/',target='_blank') Star Trek IV: The Voyage Home (1986)
+            li
+              a(href='https://www.imdb.com/title/tt0117731/',target='_blank') Star Trek: First Contact (1996)
+            li
+              a(href='https://www.imdb.com/title/tt0092455/',target='_blank') Star Trek: The Next Generation (1987-1994)
       //p Current favourite music:
       p Favourite coding languages:
       ul
