--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -56,6 +56,9 @@
               a(href='https://www.imdb.com/title/tt0117731/',target='_blank') Star Trek: First Contact (1996)
             li
               a(href='https://www.imdb.com/title/tt0092455/',target='_blank') Star Trek: The Next Generation (1987-1994)
+        li
+          a(href='https://www.imdb.com/title/tt0056751/',target='_blank') Doctor Who (1963-)
+          |  (my favourite Doctor is Tom Baker)	
       //p Current favourite music:
       p Favourite coding languages:
       ul
