--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -59,7 +59,30 @@
         li
           a(href='https://www.imdb.com/title/tt0056751/',target='_blank') Doctor Who (1963-)
           |  (my favourite Doctor is Tom Baker)	
-      //p Current favourite music:
+      p Current favourite music:
+      ul
+        li Pink Floyd:
+          ul
+            li Comfortably Numb
+            li Another Brick in the Wall
+            li Wish You Were Here
+            li The Dark Side of the Moon (yes, to me it's a single song)
+        li Focus
+          ul
+            li Anonymus II 
+            li Eruption 
+            li Sylvia/Hocus Pocus 
+        li 16volt
+          ul
+            li At The End
+            li Therapy
+        li Bring Me The Horizon
+          ul
+            li That's The Spirit (the whole album is amazing!)
+        li Starset
+          ul
+            li My Demons
+        li Many more...
       p Favourite coding languages:
       ul
         li
