more youtube plus structure

--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -26,10 +26,20 @@
           a(href='https://www.nhs.uk/conditions/generalised-anxiety-disorder/',target='_blank') Anxiety
       p Favourite YouTube channels:
       ul
-        li
-          a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
-        li
-          a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
+        li Maths
+        ul
+          li
+            a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
+          li
+            a(href='https://www.youtube.com/channel/UC1_uAIS3r8Vu6JjXWvastJg',target='_blank') Mathologer
+        li Science
+        ul
+          li
+            a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
+        li Computer Science
+        ul
+          li
+            a(href='https://www.youtube.com/user/Computerphile',target='_blank') Computerphile
       p Current favourite TV shows/movies:
       ul
         li The Hannibal film and TV series:
