Split out faves and health

--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -2,6 +2,10 @@ div
   ul.navbar-nav.px-3
     +menuitem('Intro', true)
       include ../pages/intro
+    +menuitem('Health')
+      include ../pages/health
+    +menuitem('Favourites')
+      include ../pages/favs
     +menuitem('Ham Radio')
       include ../pages/ham
     +menuitem('Music')
