--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -8,126 +8,5 @@
         |&nbsp;
         a(href='http://tsumikimikan.com',target='_blank') Tsumiki
         |.
-      p I enjoy coffee, I think I'm addicted to caffeine. Don't be if you can help it!
       p I also enjoy discordant and nonsensical commentary.
-      p Topics I can talk about at length:
-      ul
-        li Maths
-        li Physics
-        li Computer Science
-        li Linguistics
-      p Diagnoses:
-      ul
-        li
-          a(href='https://www.nhs.uk/conditions/autism/',target='_blank') Asperger's Syndrome
-        li
-          a(href='https://www.nhs.uk/conditions/fibromyalgia/',target='_blank') Fibromyalgia
-        li
-          a(href='https://www.nhs.uk/conditions/generalised-anxiety-disorder/',target='_blank') Anxiety
-      p Favourite YouTube channels:
-      ul
-        li Maths
-        ul
-          li
-            a(href='https://www.youtube.com/user/numberphile',target='_blank') Numberphile
-          li
-            a(href='https://www.youtube.com/channel/UC1_uAIS3r8Vu6JjXWvastJg',target='_blank') Mathologer
-        li Science
-        ul
-          li
-            a(href='https://www.youtube.com/user/Vsauce',target='_blank') Vsauce
-        li Computer Science
-        ul
-          li
-            a(href='https://www.youtube.com/user/Computerphile',target='_blank') Computerphile
-      p Current favourite TV shows/movies:
-      ul
-        li The Hannibal film and TV series:
-          ul
-            li
-              a(href='https://www.imdb.com/title/tt0091474/',target='_blank') Manhunter (1986)
-              br
-              | (well, you know... it's got... Iron Butterfly? *shrug*)
-            li
-              a(href='https://www.imdb.com/title/tt0102926/',target='_blank') The Silence of the Lambs (1991)
-            li
-              a(href='https://www.imdb.com/title/tt0212985/',target='_blank') Hannibal (2001)
-            li
-              a(href='https://www.imdb.com/title/tt0289765/',target='_blank') Red Dragon (2002)
-            li
-              a(href='https://www.imdb.com/title/tt0367959/',target='_blank') Hannibal Rising (2007)
-            li
-              a(href='https://www.imdb.com/title/tt2243973/',target='_blank') Hannibal (TV series, 2013-)
-        li Star Trek films and series:
-          ul
-            li
-              a(href='https://www.imdb.com/title/tt0092007/',target='_blank') Star Trek IV: The Voyage Home (1986)
-            li
-              a(href='https://www.imdb.com/title/tt0117731/',target='_blank') Star Trek: First Contact (1996)
-            li
-              a(href='https://www.imdb.com/title/tt0092455/',target='_blank') Star Trek: The Next Generation (1987-1994)
-        li
-          a(href='https://www.imdb.com/title/tt0056751/',target='_blank') Doctor Who (1963-)
-          |  (my favourite Doctor is Tom Baker)	
-      p Current favourite music:
-      ul
-        li Pink Floyd:
-          ul
-            li Comfortably Numb
-            li Another Brick in the Wall
-            li Wish You Were Here
-            li The Dark Side of the Moon (yes, to me it's a single song)
-        li Focus
-          ul
-            li Anonymus II 
-            li Eruption 
-            li Sylvia/Hocus Pocus 
-        li 16volt
-          ul
-            li At The End
-            li Therapy
-        li Bring Me The Horizon
-          ul
-            li That's The Spirit (the whole album is amazing!)
-        li Starset
-          ul
-            li My Demons
-        li Many more...
-      p Favourite coding languages:
-      ul
-        li
-          a(href='https://www.typescriptlang.org/',target='_blank') TypeScript
-          |  (for serious work)
-        li
-          a(href='https://en.wikipedia.org/wiki/JavaScript',target='_blank') Javascript
-          |  (for small, easy things)
-        li
-          a(href='https://pugjs.org',target='_blank') Pug
-          |  (used to generate this website)
-      p Favourite FPS games:
-      ul
-        li
-          a(href='http://www.idsoftware.com/en-gb',target='_blank') Quake
-        li
-          a(href='http://sauerbraten.org/',target='_blank') Cube 2: Sauerbraten
-        li
-          a(href='https://en.wikipedia.org/wiki/The_Elder_Scrolls_IV:_Oblivion',target='_blank') The Elder Scrolls IV: Oblivion
-      p Favourite operating systems:
-      ul
-        li
-          a(href='http://www.gnu.org/gnu/why-gnu-linux.en.html',target='_blank') GNU/Linux
-          |: 
-          a(href='http://kubuntu.org',target='_blank') Kubuntu
-        li
-          a(href='https://en.wikipedia.org/wiki/Blue_Screen_of_Death',target='_blank') Windows
-          |: 
-          a(href='https://en.wikipedia.org/wiki/Windows_98#Windows_98_Second_Edition',target='_blank') 98 SE
-        li
-          | All-time: 
-          a(href='http://riscos.com/riscos/310/index.php',target='_blank') RISC OS
-      p Favourite musical styles:
-      ul
-        li Prog Rock
-        li Heavy Metal
-        li Ambient
-        li Classical
+      p I can speak about maths, physics, computer science and linguistics at length.
