--- a/templates/pages/intro.pug
+++ b/templates/pages/intro.pug
@@ -10,3 +10,4 @@
         |.
       p I also enjoy discordant and nonsensical commentary.
       p I can speak about maths, physics, computer science and linguistics at length.
+      p You can find out more by using the links at the top.
