--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -13,6 +13,7 @@ div
     +menuitem('Maths')
       include ../pages/maths   
     +menuitem-external('https://jolharg.com') Software
-    +menuitem-external('https://tuxtor.blogspot.co.uk') Blog
+    +menuitem-external('https://blog.dandart.co.uk') Blog
+    +menuitem-external('https://chihiro.dandart.co.uk') WIP Blog Upgrade
     +menuitem('Contact')
       include ../pages/contact
