--- a/templates/pages/health.pug
+++ b/templates/pages/health.pug
@@ -6,6 +6,11 @@
       p I think I'm addicted to caffeine, which I wouldn't recommend.
       p I have been diagnosed with the following things, both physical and mental intermingling:
       ul
+        li Mild 
+          a(href='https://en.wikipedia.org/wiki/Amnesia',target='_blank') short-term memory loss 
+          | (allegedly caused by mild 
+          a(href='https://en.wikipedia.org/wiki/Posttraumatic_stress_disorder',target='_blank') PTSD
+          | )
         li
           a(href='https://www.nhs.uk/conditions/fibromyalgia/',target='_blank') Fibromyalgia
         li
