add character page and realphabetise

--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -2,12 +2,14 @@ div
   ul.navbar-nav.px-3
     +menuitem('Intro', true)
       include ../pages/intro
-    +menuitem('Health')
-      include ../pages/health
+    +menuitem('Characters')
+      include ../pages/characters
     +menuitem('Favourites')
       include ../pages/favs
     +menuitem('Ham Radio')
       include ../pages/ham
+    +menuitem('Health')
+      include ../pages/health
     +menuitem('Music')
       include ../pages/music
     +menuitem('Maths')
