--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -23,6 +23,11 @@
         ul
           li
             a(href='https://www.youtube.com/user/Computerphile',target='_blank') Computerphile
+        li
+          strong General Knowledge / Other
+        ul
+          li
+            a(href='https://www.youtube.com/channel/UC9pgQfOXRsp4UKrI8q0zjXQ',target='_blank') Lindybeige
       p
         strong TV shows/movies
       ul
