--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -29,7 +29,10 @@
           li
             a(href='https://www.youtube.com/channel/UC9pgQfOXRsp4UKrI8q0zjXQ',target='_blank') Lindybeige
       p
-        strong TV shows/movies
+        strong TV shows/movies 
+        | (I also have an 
+        a(href='https://www.imdb.com/list/ls029966237/',target='_blank') IMDB
+        |  watchlist)
       ul
         li The Hannibal film and TV series:
           ul
