--- a/templates/pages/characters.pug
+++ b/templates/pages/characters.pug
@@ -28,6 +28,13 @@
               a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa:_Trigger_Happy_Havoc',target='_blank') Chihiro Fujisaki
               | , because I love programming and feel similar about life
         li from 
+          a(href='https://en.wikipedia.org/wiki/Miss_Kobayashi%27s_Dragon_Maid',target='_blank') Kobayashi-san Chi no Maid Dragon
+          | :
+          ul
+            li
+              a(href='http://maid-dragon.wikia.com/wiki/Fafnir',target='_blank') Fafnir
+              | , because he's dapper, awesome, interesting and acts hilariously
+        li from 
           a(href='https://en.wikipedia.org/wiki/Future_Diary',target='_blank') Mirai Nikki
           | :
           ul
