--- a/templates/pages/characters.pug
+++ b/templates/pages/characters.pug
@@ -22,7 +22,7 @@
           | :
           ul
             li
-              a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa_2:_Goodbye_Despair',target='_blank') Komaeda Nagito
+              a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa_2:_Goodbye_Despair',target='_blank') Nagito Komaeda
               | , because I'm very lucky and obsessed with hope, and also trash
             li
               a(href='https://en.wikipedia.org/wiki/List_of_Danganronpa_characters#Danganronpa:_Trigger_Happy_Havoc',target='_blank') Chihiro Fujisaki
