--- a/templates/pages/favs.pug
+++ b/templates/pages/favs.pug
@@ -106,7 +106,7 @@
           a(href='https://ddlc.moe/',target='_blank') Doki Doki Literature Club
         li
           a(href='https://danganronpa.us/',target='_blank') Danganronpa
-          |  (no despair girls / V3 spoilers please!)
+          |  (no despair girls / hope side spoilers please!)
       p
         strong Coding languages:
       ul
