About This Site

--- a/templates/includes/menu.pug
+++ b/templates/includes/menu.pug
@@ -13,7 +13,9 @@ div
     +menuitem('Music')
       include ../pages/music
     +menuitem('Maths')
-      include ../pages/maths   
+      include ../pages/maths
+    +menuitem('About This Site')
+      include ../pages/about
     +menuitem-external('https://jolharg.com') Software
     +menuitem-external('https://blog.dandart.co.uk') Blog
     +menuitem-external('https://chihiro.dandart.co.uk') WIP Blog Upgrade
